--- a/行政-內政/著作權法.md
+++ b/行政-內政/著作權法.md
@@ -4,9 +4,9 @@
 
 > 釋：第二項酌作修正，本項所稱「前項業務」應指「著作權業務」，其業務於八十八年一月二十六日即已由經濟部指定智慧財產局辦理，爰予修正。
 
-* 3 本法用詞定義如下：一、著作：指屬於文學、科學、藝術或其他學術範圍之創作。二、著作人：指創作著作之人。三、著作權：指因著作完成所生之著作人格權及著作財產權。四、公眾：指不特定人或特定之多數人。但家庭及其正常社交之多數人，不在此限。五、重製：指以印刷、複印、錄音、錄影、攝影、筆錄或其他方法直接、間接、永久或暫時之重複製作。於劇本、音樂著作或其他類似著作演出或播送時予以錄音或錄影；或依建築設計圖或建築模型建造建築物者，亦屬之。六、公開口述：指以言詞或其他方法向公眾傳達著作內容。七、公開播送：指基於公眾直接收聽或收視為目的，以有線電、無線電或其他器材之廣播系統傳送訊息之方法，藉聲音或影像，向公眾傳達著作內容。由原播送人以外之人，以有線電、無線電或其他器材之廣播系統傳送訊息之方法，將原播送之聲音或影像向公眾傳達者，亦屬之。八、公開上映：指以單一或多數視聽機或其他傳送影像之方法於同一時間向現場或現場以外一定場所之公眾傳達著作內容。九、公開演出：指以演技、舞蹈、歌唱、彈奏樂器或其他方法向現場之公眾傳達著作內容。以擴音器或其他器材，將原播送之聲音或影像向公眾傳達者，亦屬之。十、公開傳輸：指以有線電、無線電之網路或其他通訊方法，藉聲音或影像向公眾提供或傳達著作內容，包括使公眾得於其各自選定之時間或地點，以上述方法接收著作內容。十一、改作：指以翻譯、編曲、改寫、拍攝影片或其他方法就原著作另為創作。十二、散布：指不問有償或無償，將著作之原件或重製物提供公眾交易或流通。十三、公開展示：指向公眾展示著作內容。十四、發行：指權利人散布能滿足公眾合理需要之重製物。十五、公開發表：指權利人以發行、播送、上映、口述、演出、展示或其他方法向公眾公開提示著作內容。十六、原件：指著作首次附著之物。十七、權利管理電子資訊：指於著作原件或其重製物，或於著作向公眾傳達時，所表示足以確認著作、著作名稱、著作人、著作財產權人或其授權之人及利用期間或條件之相關電子資訊；以數字、符號表示此類資訊者，亦屬之。十八、防盜拷措施：指著作權人所採取有效禁止或限制他人擅自進入或利用著作之設備、器材、零件、技術或其他科技方法。前項第八款所稱之現場或現場以外一定場所，包含電影院、俱樂部、錄影帶或碟影片播映場所、旅館房間、供公眾使用之交通工具或其他供不特定人進出之場所。
+* 3 本法用詞，定義如下：一、著作：指屬於文學、科學、藝術或其他學術範圍之創作。二、著作人：指創作著作之人。三、著作權：指因著作完成所生之著作人格權及著作財產權。四、公眾：指不特定人或特定之多數人。但家庭及其正常社交之多數人，不在此限。五、重製：指以印刷、複印、錄音、錄影、攝影、筆錄或其他方法直接、間接、永久或暫時之重複製作。於劇本、音樂著作或其他類似著作演出或播送時予以錄音或錄影；或依建築設計圖或建築模型建造建築物者，亦屬之。六、公開口述：指以言詞或其他方法向公眾傳達著作內容。七、公開播送：指基於公眾直接收聽或收視為目的，以有線電、無線電或其他器材之廣播系統傳送訊息之方法，藉聲音或影像，向公眾傳達著作內容。由原播送人以外之人，以有線電、無線電或其他器材之廣播系統傳送訊息之方法，將原播送之聲音或影像向公眾傳達者，亦屬之。八、公開上映：指以單一或多數視聽機或其他傳送影像之方法於同一時間向現場或現場以外一定場所之公眾傳達著作內容。九、公開演出：指以演技、舞蹈、歌唱、彈奏樂器或其他方法向現場之公眾傳達著作內容。以擴音器或其他器材，將原播送之聲音或影像向公眾傳達者，亦屬之。十、公開傳輸：指以有線電、無線電之網路或其他通訊方法，藉聲音或影像向公眾提供或傳達著作內容，包括使公眾得於其各自選定之時間或地點，以上述方法接收著作內容。十一、改作：指以翻譯、編曲、改寫、拍攝影片或其他方法就原著作另為創作。十二、散布：指不問有償或無償，將著作之原件或重製物提供公眾交易或流通。十三、公開展示：指向公眾展示著作內容。十四、發行：指權利人散布能滿足公眾合理需要之重製物。十五、公開發表：指權利人以發行、播送、上映、口述、演出、展示或其他方法向公眾公開提示著作內容。十六、原件：指著作首次附著之物。十七、權利管理電子資訊：指於著作原件或其重製物，或於著作向公眾傳達時，所表示足以確認著作、著作名稱、著作人、著作財產權人或其授權之人及利用期間或條件之相關電子資訊；以數字、符號表示此類資訊者，亦屬之。十八、防盜拷措施：指著作權人所採取有效禁止或限制他人擅自進入或利用著作之設備、器材、零件、技術或其他科技方法。十九、網路服務提供者，指提供下列服務者：(一)連線服務提供者：透過所控制或營運之系統或網路，以有線或無線方式，提供資訊傳輸、發送、接收，或於前開過程中之中介及短暫儲存之服務者。(二)快速存取服務提供者：應使用者之要求傳輸資訊後，透過所控制或營運之系統或網路，將該資訊為中介及暫時儲存，以供其後要求傳輸該資訊之使用者加速進入該資訊之服務者。(三)資訊儲存服務提供者：透過所控制或營運之系統或網路，應使用者之要求提供資訊儲存之服務者。(四)搜尋服務提供者：提供使用者有關網路資訊之索引、參考或連結之搜尋或連結之服務者。前項第八款所定現場或現場以外一定場所，包含電影院、俱樂部、錄影帶或碟影片播映場所、旅館房間、供公眾使用之交通工具或其他供不特定人進出之場所。
 
-> 釋：照黨團協商條文通過。
+> 釋：一、第一項增訂第十九款「網路服務提供者」定義，序言並酌作標點修正。按本次修正增訂第六章之一「網路服務提供者之民事免責事由」專章，係賦予網路服務提供者「避風港」之機制，爰參考國外立法例，將網路服務提供者定義為提供連線、快速存取、資訊儲存及搜尋服務等四種類型。二、茲說明第十九款各目之規定如下：(一)第一目係參考美國1998年訂定之「數位千禧年著作權法（Digital Millennium Copyright Act of 1998, DMCA）」（以下簡稱DMCA）第五百十二條a項之規定訂定，包括所有網路運作之基礎服務，例如透過網路所為之資訊傳輸（transmitting）、發送（routing）、連線（providing connections）或過程中之中介（intermediate）及短暫（transient）儲存等服務。(二)第二目係參考美國DMCA第五百十二條b項之規定訂定，指藉由系統或網路進行資料之中介（intermediate）及暫時（temporary）儲存服務者。(三)第三目係參考美國DMCA第五百十二條c項之規定訂定，指依使用者之指示進行資訊儲存者。(四)第四目係參考美國DMCA第五百十二條d項之規定訂定，指因使用資訊搜尋工具，包括目錄、指引、參考、指標或超連結等，提供或將使用者連結到其所搜尋之網站。(五)針對目前企業建置資訊系統機房所面臨之許多問題，如：機房所在大樓安全性、空間擴充、電力不足、維運人力、頻寬限制等等問題，所應運而生之IDC（Internet Data Center，又稱主機代管）服務，則非屬本法規範對象，特予說明，以杜爭議。三、第二項酌作文字修正，以與一般法制用字相符。
 
 * 4 外國人之著作合於下列情形之一者，得依本法享有著作權。但條約或協定另有約定，經立法院議決通過者，從其約定：一、於中華民國管轄區域內首次發行，或於中華民國管轄區域外首次發行後三十日內在中華民國管轄區域內發行者。但以該外國人之本國，對中華民國人之著作，在相同之情形下，亦予保護且經查證屬實者為限。二、依條約、協定或其本國法令、慣例，中華民國人之著作得在該國享有著作權者。
 
@@ -290,11 +290,47 @@
 
 > 釋：照黨團協商條文通過。
 
+* 90.10 有下列情形之一者，網路服務提供者對涉有侵權之使用者，不負賠償責任：一、依第九十條之六至第九十條之八之規定，移除或使他人無法進入該涉有侵權之內容或相關資訊。二、知悉使用者所為涉有侵權情事後，善意移除或使他人無法進入該涉有侵權之內容或相關資訊。
+
+> 釋：一、本條新增。二、第一款規定說明如下：(一)由於網路服務提供者不負侵權與否之判斷責任，只要通知文件內容形式上齊備，應立即移除或使他人無法進入該涉嫌侵權內容，除可不負著作權或製版權侵害賠償責任外，縱令事後證明該被移除之內容並不構成侵權，網路服務提供者亦無須對使用者負民事賠償責任。(二)在資訊儲存服務提供者之情況，尚須履行第九十條之九所定之處理程序，始可對該涉有侵權之使用人，不負賠償責任，併予敘明。三、第二款規定係指網路服務提供者於著作權人或製版權人正式通知以外之其他管道知悉侵權情事者，例如係由第三人檢舉或由著作權人或製版權人不合實施辦法規定格式之通知或對明顯涉及侵權之情事主動知悉時，如網路服務提供者主動移除或使他人無法進入該涉有侵權之內容或相關資訊時，自無須為使用人之侵權行為對著作權人或製版權人負損害賠償責任，然網路服務提供者是否須對該使用者負違反契約之民事責任？爰於本款規定網路服務提供者於此等情況，只要網路服務提供者係基於善意而移除該涉有侵害之內容或相關資訊，縱令事後證明該被移除之內容並不構成侵權，對該被移除內容之使用者，亦不負賠償責任。因此，所稱「善意」，係指網路服務提供者對該涉有侵權之內容並未構成侵權之情事不知情，縱其有過失者，亦無須負責，以鼓勵網路服務提供者於主動知悉侵權活動時，採取適當之措施，以維護著作權人或製版權人之正當權益。又本款之規定並非課予網路服務提供者對其所控制或營運之系統或網路上所有活動負有監督及判斷是否構成侵權之義務，併予敘明。
+
+* 90.11 因故意或過失，向網路服務提供者提出不實通知或回復通知，致使用者、著作權人、製版權人或網路服務提供者受有損害者，負損害賠償責任。
+
+> 釋：一、本條新增。二、由於網路服務提供者不負侵權與否之判斷責任，只要著作權人或製版權人之通知文件或使用者之回復通知文件內容形式上齊備，應移除或使他人無法進入該涉嫌侵權內容或予以回復。因此，任何人如提出不實通知或回復通知，致他人因網路服務提供者依本章規定移除或回復涉有侵權內容或相關資訊，而受有損害者，依民法第一百八十四條第一項前段規定，該等提出不實通知或回復通知之行為人，即應向因而受有損害之他方（包括：使用者、著作權人、製版權人或網路服務提供者），負損害賠償責任。亦即，損害賠償責任之有無，仍應回歸民法規定加以論斷。三、本章規定之「通知/回復通知」機制如遭誤用，除對網路服務提供者造成營運上之困擾，亦會影響網路服務提供者配合執行本章制度之意願，爰特重申不實通知或回復通知者之侵權行為法律責任，藉以提醒著作權人、製版權人及使用者審慎為之。
+
+* 90.12 第九十條之四聯繫窗口之公告、第九十條之六至第九十條之九之通知、回復通知內容、應記載事項、補正及其他應遵行事項之辦法，由主管機關定之。
+
+> 釋：一、本條新增。二、授權主管機關就本章所定聯繫窗口之公告、通知、回復通知、通知應記載事項及其補正等相關執行細節，訂定辦法補充之。
+
 * 90.2 前條之實施辦法，由主管機關會同財政部定之。
 
 * 90.3 違反第八十條之一或第八十條之二規定，致著作權人受損害者，負賠償責任。數人共同違反者，負連帶賠償責任。第八十四條、第八十八條之一、第八十九條之一及第九十條之一規定，於違反第八十條之一或第八十條之二規定者，準用之。
 
 > 釋：照黨團協商條文通過。
+
+* 90.4 符合下列規定之網路服務提供者，適用第九十條之五至第九十條之八之規定：一、以契約、電子傳輸、自動偵測系統或其他方式，告知使用者其著作權或製版權保護措施，並確實履行該保護措施。二、以契約、電子傳輸、自動偵測系統或其他方式，告知使用者若有三次涉有侵權情事，應終止全部或部分服務。三、公告接收通知文件之聯繫窗口資訊。四、執行第三項之通用辨識或保護技術措施。連線服務提供者於接獲著作權人或製版權人就其使用者所為涉有侵權行為之通知後，將該通知以電子郵件轉送該使用者，視為符合前項第一款規定。著作權人或製版權人已提供為保護著作權或製版權之通用辨識或保護技術措施，經主管機關核可者，網路服務提供者應配合執行之。
+
+> 釋：一、本條新增。二、第一項係參考美國DMCA第五百十二條（i）(1)（A）之立法例，規定網路服務提供者適用本章之先決要件。茲說明各款規定如 下：(一)第一款係指網路服務提供者應採取著作權或製版權保護措施，除向其使用者明確告知外，並應確實履行該等保護措施。有關網路服務提供者向使用者告知其保護措施之方法，可以契約、電子傳輸、自動偵測系統或其他方式為之，茲說明如下：1.以契約方式為之：例如訂定使用者約款，載明使用者應避免侵害他人著作權或製版權，及使用者如涉有侵害他人著作權或製版權時，網路服務提供者得為之處置，並將此等約款納入各種網路服務相關契約中。2.以電子傳輸方式為之：如網路服務提供者在使用者上傳或分享資訊時，跳出視窗提醒上傳或分享之使用者，必須取得合法授權，始得利用該服務等訊息，提醒使用者避免侵害他人著作權或製版權。3.以自動偵測系統為之：包含自動或半自動之偵測或過濾侵害著作權或製版權內容之技術。4.以其他方式為之：如設置專人處理著作權或製版權侵害之檢舉事宜，並在具體個案中積極協助釐清是否涉有侵權之爭議。(二)第二款係規定網路服務提供者應告知使用者，如其利用網路服務提供者所提供之服務多次涉有侵權行為時，網路服務提供者得終止全部或部分之服務。(三)第三款規定「公告接收通知文件之聯繫窗口資訊」，係為便利著作權人或製版權人提出通知，或使用者提出回復通知，以加速處理時效。(四)第四款規定係指由著作權人或製版權人依第三項之規定，主動提供予網路服務提供者使用之技術措施，網路服務提供者配合執行時，得作為適用本章之先決要件。但並非課予網路服務提供者負有發展該等技術措施之義務。又該等技術措施，係指用以辨識（identify）或保護（protect）享有著作權、製版權標的之措施。三、為鼓勵連線服務提供者協助防制網路上之侵權行為，特別是網路交換軟體之侵權（例如：透過P2P軟體下載或分享受本法保護之檔案），爰於第二項規定連線服務提供者於接獲著作權人或製版權人通知涉有侵權行為之情事後，將該通知以電子郵件轉送給該IP位址使用者，即屬確實履行第一項第一款之著作權或製版權保護措施。又本項規定並非課予連線服務提供者「轉送」之義務，縱連線服務提供者未配合轉送，如有其他確實履行著作權或製版權保護措施之情事者，仍得適用第一項第一款之規定。四、第三項係參考美國DMCA第五百十二條（i）(1)（B）之立法例。茲說明如下：(一)所稱「通用」，係指該等辨識或保護技術措施，係依據著作權人、製版權人及網路服務提供者在廣泛共識下所開發完成而被採行者。(二)所稱「對網路服務提供者造成不合理負擔」，係指會增加網路服務提供者重大費用支出或導致其系統或網路運作之重大負擔者。(三)本項之規定，須符合(1)著作權人或製版權人已提供其保護著作權或製版權之通用辨識或保護技術措施予網路服務提供者，且(2)不致造成網路服務提供者不合理負擔，網路服務提供者始應配合執行，反之，若不符合上述二項條件，則網路服務提供者無須配合執行，只要其符合本條第一項第一款至第三款之要件，即得適用本章民事免責事由規定。
+
+* 90.5 有下列情形者，連線服務提供者對其使用者侵害他人著作權或製版權之行為，不負賠償責任：一、所傳輸資訊，係由使用者所發動或請求。二、資訊傳輸、發送、連結或儲存，係經由自動化技術予以執行，且連線服務提供者未就傳輸之資訊為任何篩選或修改。
+
+> 釋：一、本條新增。二、本條係參考美國DMCA第五百十二條a項"TRANSITORY DIGITAL NETWORK COMMUNICATION"之立法例，規定連線服務提供者不負賠償責任應具備之要件。三、另依連線服務提供者之特性，無法以「通知/取下」程序處理，爰未如修正條文第九十條之六第三款、第九十條之七第三款及第九十條之八第三款訂定「通知/取下」程序之適用。
+
+* 90.6 有下列情形者，快速存取服務提供者對其使用者侵害他人著作權或製版權之行為，不負賠償責任：一、未改變存取之資訊。二、於資訊提供者就該自動存取之原始資訊為修改、刪除或阻斷時，透過自動化技術為相同之處理。三、經著作權人或製版權人通知其使用者涉有侵權行為後，立即移除或使他人無法進入該涉有侵權之內容或相關資訊。
+
+> 釋：一、本條新增。二、本條參考美國DMCA第五百十二條b項"SYSTEM CACHING"之立法例，規定快速存取服務提供者對其使用者利用其所提供之服務，不法侵害他人著作權或製版權之行為，不負賠償責任應具備之要件。三、網路服務提供者接獲著作權人或製版權人之通知後，並不負侵權與否之判斷責任，只要通知文件內容形式上齊備，應立即移除或使他人無法進入該涉嫌侵權內容。
+
+* 90.7 有下列情形者，資訊儲存服務提供者對其使用者侵害他人著作權或製版權之行為，不負賠償責任：一、對使用者涉有侵權行為不知情。二、未直接自使用者之侵權行為獲有財產上利益。三、經著作權人或製版權人通知其使用者涉有侵權行為後，立即移除或使他人無法進入該涉有侵權之內容或相關資訊。
+
+> 釋：一、本條新增。二、本條係參考美國DMCA第五百十二條c項"Information Resides on System or Network at Direction of Users"之立法例予以規定。三、第一款所稱「不知情」，參考美國DMCA第五百十二條（c）規定，可包含以下二種情形：1、對具體利用其設備、服務從事侵權一事確不知情（does not have actual knowledge that the material or an activity using the material on the system or network is infringing）；或2、不瞭解侵權活動至為明顯之事實或情況者（is not aware of facts or circum-stances from which infringing activity is apparent.）。四、第二款所稱「未直接自使用者之侵權行為獲有財產上利益」，係指網路服務提供者之獲益與使用者之侵權行為間不具有相當因果關係。例如，在網拍之情形，雖對使用者收取費用，該等費用之收取係使用者使用其服務之對價，不論使用者係從事販買合法或非法商品，均一律收取者，尚難認其係「直接」自侵權行為獲有財產上利益。又例如網路服務提供者之廣告收益，如其提供之所有服務中，侵權活動所占之比率甚微時，亦難認該廣告收益係屬「直接」自使用者侵權行為所獲之財產上利益；反之，若其提供之所有服務中，侵權活動所占之比率甚高時，該廣告收益即可能構成「直接」自使用者侵權行為獲有財產上利益。又「財產上利益」，指金錢或得以金錢計算之利益，廣告收益及會員入會費均屬之。五、第三款之訂定理由如修正條文第九十條之六說明三。
+
+* 90.8 有下列情形者，搜尋服務提供者對其使用者侵害他人著作權或製版權之行為，不負賠償責任：一、對所搜尋或連結之資訊涉有侵權不知情。二、未直接自使用者之侵權行為獲有財產上利益。三、經著作權人或製版權人通知其使用者涉有侵權行為後，立即移除或使他人無法進入該涉有侵權之內容或相關資訊。
+
+> 釋：一、本條新增。二、本條係參考美國DMCA第五百十二條d項"Information Location Tools"之立法例，規定搜尋服務提供者對其使用者利用其所提供之服務，不法侵害他人著作權或製版權之行為，不負賠償責任應具備之要件。三、各款訂定理由如修正條文第九十條之七說明三、四及五。
+
+* 90.9 資訊儲存服務提供者應將第九十條之七第三款處理情形，依其與使用者約定之聯絡方式或使用者留存之聯絡資訊，轉送該涉有侵權之使用者。但依其提供服務之性質無法通知者，不在此限。前項之使用者認其無侵權情事者，得檢具回復通知文件，要求資訊儲存服務提供者回復其被移除或使他人無法進入之內容或相關資訊。資訊儲存服務提供者於接獲前項之回復通知後，應立即將回復通知文件轉送著作權人或製版權人。著作權人或製版權人於接獲資訊儲存服務提供者前項通知之次日起十個工作日內，向資訊儲存服務提供者提出已對該使用者訴訟之證明者，資訊儲存服務提供者不負回復之義務。著作權人或製版權人未依前項規定提出訴訟之證明，資訊儲存服務提供者至遲應於轉送回復通知之次日起十四個工作日內，回復被移除或使他人無法進入之內容或相關資訊。但無法回復者，應事先告知使用者，或提供其他適當方式供使用者回復。
+
+> 釋：一、本條新增。二、第一項規定資訊儲存服務提供者應將移除或使他人無法進入該涉有侵權內容之處理情形，通知涉有侵權之使用者。考量降低資訊儲存服務提供者通知之成本及其掌握之使用者聯絡資訊未必真實等情事，特規定以其與使用者約定之方式，或依使用者留存之聯絡資訊通知即可，不以絕對送達使用者為必要。另顧及資訊儲存服務提供者依其提供服務之性質，而未留存使用者連絡資訊之事實，例如架設網站供使用者無須註冊或登記即得利用其服務，而未留存連絡資訊，爰於第一項但書規定予以排除。三、第二項規定涉有侵權之使用者，認為其有合法權利使用該被移除或無法進入之內容或相關資訊時，得檢具回復通知（counter notification）文件，要求資訊儲存服務提供者，回復其被移除或使他人無法進入之內容。四、第三項規定資訊儲存服務提供者負有立即將回復通知文件轉送予著作權人或製版權人之義務，以利渠等進行後續處理之判斷。五、第四項規定所稱「訴訟之證明」，包含排除侵害或損害賠償民事訴訟之證明，或依刑事訴訟法之規定提出告訴或自訴之證明，資訊儲存服務提供者於法定期間內接獲該等證明，即無須回復該被移除或使他人無法進入之內容或相關資訊。六、第五項規定著作權人或製版權人未於法定期間內提出訴訟之證明者，資訊儲存服務提供者應予以回復之義務及無法回復時之處理方式。
 
 * 91 擅自以重製之方法侵害他人之著作財產權者，處三年以下有期徒刑、拘役，或科或併科新臺幣七十五萬元以下罰金。意圖銷售或出租而擅自以重製之方法侵害他人之著作財產權者，處六月以上五年以下有期徒刑，得併科新臺幣二十萬元以上二百萬元以下罰金。以重製於光碟之方法犯前項之罪者，處六月以上五年以下有期徒刑，得併科新臺幣五十萬元以上五百萬元以下罰金。著作僅供個人參考或合理使用者，不構成著作權侵害。
 
