--- a/司法-民事/公司法.md
+++ b/司法-民事/公司法.md
@@ -216,9 +216,9 @@
 
 > 釋：第一項配合商業會計法第六條，將「營業年度」修正為「會計年度」，統一法律用語。
 
-* 66 除前條規定外，股東有左列各款情事之一者退股：一、章程所定退股事由。二、死亡。三、破產。四、受禁治產之宣告。五、除名。六、股東之出資，經法院強制執行者。依前項第六款規定退股時，執行法院應於二個月前通知公司及其他股東。
+* 66 除前條規定外，股東有下列各款情事之一者退股：一、章程所定退股事由。二、死亡。三、破產。四、受監護或輔助宣告。五、除名。六、股東之出資，經法院強制執行者。依前項第六款規定退股時，執行法院應於二個月前通知公司及其他股東。
 
-> 釋：第一項主文維持現行法文字，另增列第六款及第二項。
+> 釋：配合「禁治產宣告」一級制已修正為「監護宣告」與「輔助宣告」二級制，爰修正本條第一項第四款文字。
 
 * 67 股東有左列各款情事之一者，得經其他股東全體之同意議決除名。但非通知後不得對抗該股東：一、應出之資本不能照繳或屢摧不繳者。二、違反第五十四條第一項規定者。三、有不正當行為妨害公司之利益者。四、對於公司不盡重要之義務者。
 
@@ -382,7 +382,9 @@
 
 * 122 有限責任股東，不得執行公司業務及對外代表公司。
 
-* 123 有限責任股東，不因受禁治產之宣告而退股。有限責任股東死亡時，其出資歸其繼承人。
+* 123 有限責任股東，不因受監護或輔助宣告而退股。有限責任股東死亡時，其出資歸其繼承人。
+
+> 釋：配合「禁治產宣告」一級制已修正為「監護宣告」與「輔助宣告」二級制，爰修正本法條文用字。
 
 * 124 有限責任股東遇有非可歸責於自己之重大事由時，得經無限責任股東過半數之同意退股，或聲請法院准其退股。
 
@@ -1672,7 +1674,7 @@
 
 > 釋：配合行政執行法之修正酌作文字調整。
 
-* 449 本法自公布日施行。本法修正條文，除第三百七十三條及第三百八十三條施行日期，由行政院定之外，其餘修正條文自公布日施行。
+* 449 本法除中華民國八十六年六月二十五日修正公布之第三百七十三條、第三百八十三條之施行日期由行政院定之，及九十八年五月五日修正之條文自九十八年十一月二十三日施行外，自公布日施行。
 
-> 釋：明定本法修正條文之施行日期。
+> 釋：配合民法及其施行法修正條文自九十八年十一月二十三日施行，本法本次修正之條文亦定自同日施行，爰將原條文第一項及第二項合併修正。
 
