--- a/總統/總統副總統選舉罷免法.md
+++ b/總統/總統副總統選舉罷免法.md
@@ -38,9 +38,9 @@
 
 > 釋：本條未修正。
 
-* 11 中華民國自由地區人民，年滿二十歲，除受禁治產宣告尚未撤銷者外，有選舉權。
+* 11 中華民國自由地區人民，年滿二十歲，除受監護宣告尚未撤銷者外，有選舉權。
 
-> 釋：一、九十四年二月二日修正公布之刑法，業將第三十六條第三款有關褫奪公權之範圍，刪除有關選舉、罷免、創制、複決等人民參政權之行使，並自九十五年七月一日起施行，爰配合將第一項第一款規定予以刪除，並酌作文字修正。二、配合第一項之修正，刪除第二項規定。
+> 釋：九十七年五月二十三日修正公布之民法總則編（禁治產部分）、親屬編（監護部分）及其施行法部分條文，已將「禁治產宣告」修正為「監護宣告」，爰將原條文之「受禁治產宣告」修正為「受監護宣告」。
 
 * 12 前條有選舉權人具下列條件之一者，為選舉人：一、現在中華民國自由地區繼續居住六個月以上者。二、曾在中華民國自由地區繼續居住六個月以上，現在國外，持有效中華民國護照，並在規定期間內向其最後遷出國外時之原戶籍地戶政機關辦理選舉人登記者。前項第二款在國外之中華民國自由地區人民申請返國行使選舉權登記查核辦法，由中央選舉委員會會同外交部、僑務委員會另定之。
 
@@ -98,9 +98,9 @@
 
 > 釋：將「同時辦理」修正為「同日舉行投票」，以資明確。
 
-* 26 有下列情事之一者，不得登記為總統、副總統候選人：一、動員戡亂時期終止後，曾犯內亂、外患罪，經判刑確定者。二、曾犯貪污罪，經判刑確定者。三、曾犯第八十四條第一項、第二項、第八十五條第一項第一款及其未遂犯、第八十六條第一項、第八十七條第一項第一款、第八十八條第一項、第八十九條第一項、公職人員選舉罷免法第八十九條第一項、第二項、第九十條第一項第一款及其未遂犯、第九十條之一第一項、第九十一條第一項第一款、第九十一條之一第一項、刑法第一百四十二條或第一百四十四條之罪，經判刑確定者。四、曾犯組織犯罪防制條例之罪，經判刑確定者。五、犯前四款以外之罪，判處有期徒刑以上之刑確定，尚未執行、執行未畢或於緩刑期間者。六、受死刑、無期徒刑或十年以上有期徒刑之判決尚未確定者。七、受宣告強制工作之保安處分或流氓感訓處分之裁判確定，尚未執行、執行未畢或執行完畢未滿十年者。八、受其他保安處分之裁判確定，尚未執行或執行未畢者。九、受破產宣告確定，尚未復權者。十、依法停止任用或受休職處分，尚未期滿者。十一、褫奪公權，尚未復權者。十二、受禁治產宣告，尚未撤銷者。
+* 26 有下列情事之一，不得登記為總統、副總統候選人：一、動員戡亂時期終止後，曾犯內亂、外患罪，經判刑確定者。二、曾犯貪污罪，經判刑確定者。三、曾犯第八十四條第一項、第二項、第八十五條第一項第一款及其未遂犯、第八十六條第一項、第八十七條第一項第一款、第八十八條第一項、第八十九條第一項、公職人員選舉罷免法第八十九條第一項、第二項、第九十條第一項第一款及其未遂犯、第九十條之一第一項、第九十一條第一項第一款、第九十一條之一第一項、刑法第一百四十二條或第一百四十四條之罪，經判刑確定者。四、曾犯組織犯罪防制條例之罪，經判刑確定者。五、犯前四款以外之罪，判處有期徒刑以上之刑確定，尚未執行、執行未畢或於緩刑期間者。六、受死刑、無期徒刑或十年以上有期徒刑之判決尚未確定者。七、受宣告強制工作之保安處分或流氓感訓處分之裁判確定，尚未執行、執行未畢或執行完畢未滿十年者。八、受其他保安處分之裁判確定，尚未執行或執行未畢者。九、受破產宣告確定，尚未復權者。十、依法停止任用或受休職處分，尚未期滿者。十一、褫奪公權，尚未復權者。十二、受監護或輔助宣告，尚未撤銷者。
 
-> 釋：一、序文之「左列」修正為「下列」。二、按陸海空軍刑法第二編分則第一章叛亂罪、妨害軍機治罪條例及戰時軍律等，均有關於犯內亂、外患罪之規定，且係特別法，而第一款僅規定「經依刑法判刑確定者」，即有掛漏之嫌，爰將「依刑法」三字刪除，較為周延。三、第二款未修正。四、第八十六條之罪，其犯罪之要件與刑法第一百四十四條相同，犯刑法第一百四十四條之罪，經判刑確定者，既不得登記為候選人，則犯第八十六條第一項之罪者，自亦應比照辦理。又第八十四條所謂「搓圓仔湯」之罪及第八十七條第一項第一款對團體或機構之賄選罪，第八十八條第一項所謂「包攬賄選罪」之罪，均與刑法第一百四十四條之賄選罪刑相關；第八十五條犯所謂「以暴力妨害他人競選」之罪與刑法第一百四十二條之妨害投票自由罪刑相當，另公職人員選舉罷免法第八十九條第一項、第二項、第九十條第一項、第九十條之一第一項、第九十一條第一項第一款、第九十一條之一第一項係相同之規定，為期周延，爰修正第三款明文規定之；另政黨辦理提名作業之賄選行為，納入本法處罰後，為防止犯罪判刑確定者，仍繼續藉著選舉，當選總統、副總統，爰於第三款增列曾犯第八十九條第一項之罪，經判刑確定者，不得登記為候選人之規定，以有效杜絕賄選，改善選風。五、配合組織犯罪防制條例第十三條：「犯本條例之罪，經判處有期徒刑以上之刑確定者，不得登記為公職人員候選人。」之規定，爰增列第四款。六、原條文第四款移列為第五款，配合第四款之增列，「前三款」修正為「前四款」；另受緩刑宣告者僅係暫緩執行其刑，於緩刑期間，所宣告之罪行仍存在，僅於緩刑期滿，而緩刑之宣告未經撤銷時，其刑之宣告失其效力。故為端正罪刑觀念，避免受罪刑宣告者於緩刑期間仍得參選，爰刪除但書緩刑宣告除外規定，明定於緩刑期間者亦不得參選。七、總統、副總統為國家之正、副元首，地位崇隆。受死刑、無期徒刑或十年以上有期徒刑之判決者，所受宣告之刑度甚重，反社會性顯較強烈，於案件確定前自不宜准其參選，爰增列第六款。八、對於受宣告強制工作之保安處分或流氓感訓處分之黑道份子，原條文第五款僅規定在各該處分尚未執行或執行未畢時始禁止其參選，似有違政府掃黑之政策；爰增列執行完畢未滿十年者，為候選人之消極資格，以期徹底杜絕黑道漂白，並移列為第七款，至受其他保安處分之宣告者，則維持現行規定，並另立一款為第八款。九、原條文第六款至第九款移列為第九款至第十二款。
+> 釋：配合九十七年五月二十三日修正公布之民法總則編（禁治產部分）、親屬編（監護部分）及其施行法部分條文，已將「禁治產宣告」修正為「監護宣告」，並增訂「受輔助宣告」之相關規定，爰將原條文第十二款之「受禁治產宣告」修正為「受監護宣告」，另考量受輔助宣告之人係因精神障礙或其他心智缺陷，致其為意思表示或受意思表示，或辨識其意思表示效果之能力，顯有不足，不宜擔任公職人員，爰於同款增列「受輔助宣告」亦不得登記為候選人之規定；其餘各款未修正。
 
 * 27 下列人員不得申請登記為總統、副總統候選人：一、現役軍人。二、辦理選舉事務人員。三、具有外國國籍者。前項第一款之現役軍人，屬於後備軍人應召者，在應召未入營前，或係受教育、勤務及點閱召集，均不受限制。當選人因第一百零四條第一項第二款至第四款所定情事之一，經法院判決當選無效確定者，不得申請登記為該次總統、副總統補選候選人。
 
@@ -470,7 +470,7 @@
 
 > 釋：施行細則主要規定法之施行事項或就法之規定作補充解釋。內政部為本法之擬訂機關，選務工作依第七條規定，由中央選舉委員會辦理，為資配合，爰修正本法施行細則應由內政部會同中央選舉委員會擬訂。
 
-* 117 本法自公布日施行。
+* 117 本法自公布日施行。本法中華民國九十五年五月五日修正之條文，自九十五年七月一日施行；九十八年五月十二日修正之條文，自九十八年十一月二十三日施行。
 
-> 釋：一、原條文未修正，列為第一項。二、配合刑法修正條文自九十五年七月一日施行，增列第二項，規定修正條文之施行日期。
+> 釋：一、第一項未修正。二、配合民法及其施行法修正條文自九十八年十一月二十三日修正施行，本法本次修正之條文亦定自同日施行，爰修正第二項。
 
