公職人員選舉罷免法 2009.5.12

--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -50,9 +50,9 @@
 
 > 釋：配合憲法增修條文廢除國民大會代表制度，爰將「中央公職人員」修正為「立法委員」；另「村、里」修正為「村（里）」。
 
-* 14 中華民國國民，年滿二十歲，除受禁治產宣告尚未撤銷者外，有選舉權。
+* 14 中華民國國民，年滿二十歲，除受監護宣告尚未撤銷者外，有選舉權。
 
-> 釋：一、九十四年二月二日修正公布之刑法，業已刪除原第三十六條第三款有關褫奪公權者，褫奪選舉、罷免、創制、複決四權資格之規定，並自九十五年七月一日起施行，爰配合將第一項第一款規定予以刪除，並酌作文字修正。二、配合第一項之修正，刪除第二項規定。
+> 釋：九十七年五月二十三日修正公布之民法總則編（禁治產部分）、親屬編（監護部分）及其施行法部分條文，已將「禁治產宣告」修正為「監護宣告」，爰將原條文之「受禁治產宣告」修正為「受監護宣告」。
 
 * 15 有選舉權人在各該選舉區繼續居住四個月以上者，為公職人員選舉各該選舉區之選舉人。前項之居住期間，在其行政區域劃分選舉區者，仍以行政區域為範圍計算之。但於選舉公告發布後，遷入各該選舉區者，無選舉投票權。
 
@@ -98,9 +98,9 @@
 
 > 釋：一、條次變更，本條為原條文第三十三條移列。二、第一項項首所稱二種以上公職人員選舉「同時辦理時」（例如直轄市長及直轄市議員選舉），在實務上係指二種以上公職人員選舉「同日舉行投票」，爰酌作修正，以資明確，並增列「為二種以上候選人登記時，其登記均無效。」等字。三、原條文第一項後段「同種公職人員選舉有二個以上之候選人資格者，以登記一個為限」移列於第二項明定之。
 
-* 26 有下列情事之一者，不得登記為候選人：一、動員戡亂時期終止後，曾犯內亂、外患罪，經依刑法判刑確定。二、曾犯貪污罪，經判刑確定。三、曾犯刑法第一百四十二條、第一百四十四條之罪，經判刑確定。四、犯前三款以外之罪，判處有期徒刑以上之刑確定，尚未執行或執行未畢。但受緩刑宣告者，不在此限。五、受保安處分或感訓處分之裁判確定，尚未執行或執行未畢。六、受破產宣告確定，尚未復權。七、依法停止任用或受休職處分，尚未期滿。八、褫奪公權，尚未復權。九、受禁治產宣告，尚未撤銷。
+* 26 有下列情事之一者，不得登記為候選人：一、動員戡亂時期終止後，曾犯內亂、外患罪，經依刑法判刑確定。二、曾犯貪污罪，經判刑確定。三、曾犯刑法第一百四十二條、第一百四十四條之罪，經判刑確定。四、犯前三款以外之罪，判處有期徒刑以上之刑確定，尚未執行或執行未畢。但受緩刑宣告者，不在此限。五、受保安處分或感訓處分之裁判確定，尚未執行或執行未畢。六、受破產宣告確定，尚未復權。七、依法停止任用或受休職處分，尚未期滿。八、褫奪公權，尚未復權。九、受監護或輔助宣告，尚未撤銷。
 
-> 釋：一、條次變更，本條為原條文第三十四條移列。二、序文之「左列」修正為「下列」。三、按陸海空軍刑法第二編分則第一章叛亂罪（修正後為同編章「違反效忠國家職責罪」）、戰時軍律（九十一年十二月二十五日廢止）及妨害軍機治罪條例（九十三年一月七日廢止）等，均有關於犯內亂、外患罪之規定，且係特別法，而第一款僅規定「經依刑法判決確定者」，即有掛漏之嫌，爰將「依刑法」三字刪除，較為周延。四、第二款酌作文字修正。五、第九十七條之罪，其犯罪之要件與刑法第一百四十四條相同，犯刑法第一百四十四條之罪，經判刑確定者，既不得登記為候選人，則犯第九十七條第一項之罪者，自亦應比照辦理。又第九十五條所謂「搓圓仔湯」之罪及第一百條第一項第一款對團體或機構之賄選罪，第一百零一條第一項所謂「包攬賄選罪」之罪，均與刑法第一百四十四條之賄選罪刑相關；第九十六條犯所謂「以暴力妨害他人競選」之罪與刑法第一百四十二條之妨害投票自由罪刑相當；民意機關正、副首長選舉及政黨辦理提名作業之賄選行為，納入第九十八條、第九十九條處罰後，為防止犯罪判刑確定者，繼續藉著選舉取得公職候選人身分，亦有比照辦理之必要；另總統副總統選舉罷免法第八十四條第一項、第二項、第八十五條第一項第一款及其未遂犯、第八十六條第一項、第八十七條第一項第一款、第八十八條第一項、第八十九條第一項係相同之規定，為期周延，爰修正第三款明定之。六、配合組織犯罪防制條例第十三條：「犯本條例之罪，經判處有期徒刑以上之刑確定者，不得登記為公職人員候選人。」之規定，增列第四款。七、原條文第四款移列為第五款，配合第四款之增列，「前三款」修正為「前四款」；另受緩刑宣告者僅係暫緩執行其刑，於緩刑期間，所宣告之罪行仍存在，僅於緩刑期滿，而緩刑之宣告未經撤銷時，其刑之宣告失其效力。故為端正罪刑觀念，避免受罪刑宣告者於緩刑期間仍得參選，爰刪除但書緩刑宣告除外規定，明定於緩刑期間者亦不得參選。八、受死刑、無期徒刑或十年以上有期徒刑之判決者，所受宣告之刑度甚重，反社會性顯較強烈，於案件確定前自不宜准其參選，爰增列第六款。九、對於受宣告強制工作之保安處分或流氓感訓處分之黑道份子，原條文第五款僅規定在各該處分尚未執行或執行未畢時始禁止其參選，似有違政府掃黑之政策；爰增列執行完畢未滿十年者，為候選人之消極資格，以期徹底杜絕黑道漂白，並移列為第七款，至受其他保安處分之宣告者，則維持原規定，並另立一款為第八款。十、原條文第六款至第九款移列為第九款至第十二款，並酌作文字修正。
+> 釋：九十七年五月二十三日修正公布之民法總則編（禁治產部分）、親屬編（監護部分）及其施行法部分條文，已將「禁治產宣告」、修正為「監護宣告」，並增訂「受輔助宣告」之相關規定，爰將原條文第九款之「受禁治產宣告」修正為「受監護宣告」，另考量受輔助宣告之人係因精神障礙或其他心智缺陷，致其為意思表示或受意思表示，或辨識其意思表示效果之能力，顯有不足，不宜擔任公職人員，爰於同款增列「受輔助宣告」亦不得登記為候選人之規定；其餘各款未修正。
 
 * 27 下列人員不得登記為候選人：一、現役軍人。二、服替代役之現役役男。三、軍事學校學生。四、各級選舉委員會之委員、監察人員、職員、鄉（鎮、市、區）公所辦理選舉事務人員及投票所、開票所工作人員。五、依其他法律規定不得登記為候選人者。前項第一款之現役軍人，屬於後備軍人或補充兵應召者，在應召未入營前，或係受教育、勤務及點閱召集，均不受限制。第二款服替代役之現役役男，屬於服役期滿後受召集服勤者，亦同。當選人因第一百二十條第一項第二款、第三款情事之一，經法院判決當選無效確定者，不得申請登記為該次公職人員補選候選人。
 
@@ -662,7 +662,7 @@
 
 > 釋：一、條次變更，本條為原條文第一百十二條移列。二、內政部掌理選舉制度之規劃及政策釐定事項，係本法主管機關，中央選舉委員會則為依法負責辦理選務之機關。本法施行細則主要規定本法施行事項或就本法作補充解釋。因涉及上開二機關業務權責，為資配合，並以施行細則之法制作業程序，原即須踐行經行政院核定之程序，無特別規範必要，爰予修正。
 
-* 134 本法自公布日施行。
+* 134 本法自公布日施行。本法中華民國九十八年五月十二日修正之條文，自九十八年十一月二十三日施行。
 
-> 釋：條次變更，本條為原條文第一百十三條移列，內容未修正。
+> 釋：一、第一項未修正。二、配合民法及其施行法修正條文自九十八年十一月二十三日修正施行，本法本次修正之條文亦定自同日施行，爰增訂第二項。
 
