中華民國刑法 2009.5.19

--- a/司法-刑事/中華民國刑法.md
+++ b/司法-刑事/中華民國刑法.md
@@ -132,9 +132,13 @@
 
 > 釋：照黨團協商條文通過。
 
-* 42 罰金應於裁判確定後二個月內完納。期滿而不完納者，強制執行。其無力完納者，易服勞役。但依其經濟或信用狀況，不能於二個月內完納者，得許期滿後一年內分期繳納。遲延一期不繳或未繳足者，其餘未完納之罰金，強制執行或易服勞役。依前項規定應強制執行者，如已查明確無財產可供執行時，得逕予易服勞役。易服勞役以新臺幣一千元、二千元或三千元折算一日。但勞役期限不得逾一年。依第五十一條第七款所定之金額，其易服勞役之折算標準不同者，從勞役期限較長者定之。罰金總額折算逾一年之日數者，以罰金總額與一年之日數比例折算。依前項所定之期限，亦同。科罰金之裁判，應依前二項之規定，載明折算一日之額數。易服勞役不滿一日之零數，不算。易服勞役期內納罰金者，以所納之數，依裁判所定之標準折算，扣除勞役之日期。
+* 42 罰金應於裁判確定後二個月內完納。期滿而不完納者，強制執行。其無力完納者，易服勞役。但依其經濟或信用狀況，不能於二個月內完納者，得許期滿後一年內分期繳納。遲延一期不繳或未繳足者，其餘未完納之罰金，強制執行或易服勞役。依前項規定應強制執行者，如已查明確無財產可供執行時，得逕予易服勞役。易服勞役以新臺幣一千元、二千元或三千元折算一日。但勞役期限不得逾一年。依第五十一條第七款所定之金額，其易服勞役之折算標準不同者，從勞役期限較長者定之。罰金總額折算逾一年之日數者，以罰金總額與一年之日數比例折算。依前項所定之期限，亦同。科罰金之裁判，應依前三項之規定，載明折算一日之額數。易服勞役不滿一日之零數，不算。易服勞役期內納罰金者，以所納之數，依裁判所定之標準折算，扣除勞役之日期。
 
-> 釋：一、罰金受刑人中，無力一次完納或一時無力完納者，在實務上，時有所見。我國關於罰金執行，准許分期繳納，試行有年，頗有績效，惟尚乏明文依據，爰參酌德、瑞立法例，於本條第一項增設但書規定，予以明文化。二、依原第一項規定罰金逾裁判確定二個月不完納者，必須經強制執行程序，確屬無力完納，始得易服勞役徒增不必要之勞費並耗費時日，故增列第二項規定，以為適用之依據。三、第三十三條第五款修正後，罰金刑已為新臺幣一千元以上，罰金易服勞役之標準，應與之相配合。爰除將原第二項改列為第三項外，並修正為以一千元、二千元或三千元折算一日，由審判者依具體案情斟酌決定之。四、按目前國民所得較諸過去為高，且犯罪所得之利益，亦顯然增加，而依原法規定易服勞役之期限僅六個月，即便以最高額度三百元折算一日，六個月亦不過十六餘萬元，罰金超出此數額者，即以罰金總數與六個月比例折算，殊有不公平。爰將易服勞役之期間由六個月提高至一年。並移列至第五項，以求允當。另罰金總額折算逾第四項之期限，以罰金總額與該項所定期限之日數比例折算，爰於後段增訂之。五、罰金刑有高達新臺幣數百萬元、千萬元，甚或上億元之金額，就易服勞役之規定，原規定六個月或本條所定一年之折算期間，已無法反應無力或拒絕繳納高額罰金刑情形，爰增訂第四項以從期限較長者定折算標準。六、原第四項至第六項內容不修正，款項改列為第六項至第八項。
+> 釋：一、第一項至第五項、第七項及第八項未修正。二、原條文於九十四年間修正時，係將修正前之第二項及第三項分別移為原條文第三項及第五項，並新增第四項。惟修正前之第四項於移列為原條文第六項時，並未配合調整所引項次，致生爭議，爰予酌修。
+
+* 42.1 罰金易服勞役，除有下列情形之一者外，得以提供社會勞動六小時折算一日，易服社會勞動：一、易服勞役期間逾一年。二、應執行逾六月有期徒刑併科之罰金。三、因身心健康之關係，執行社會勞動顯有困難。前項社會勞動之履行期間不得逾二年。無正當理由不履行社會勞動，情節重大，或履行期間屆滿仍未履行完畢者，執行勞役。社會勞動已履行之時數折算勞役日數，未滿一日者，以一日論。社會勞動履行期間內繳納罰金者，以所納之數，依裁判所定罰金易服勞役之標準折算，扣除社會勞動之日數。依第三項執行勞役，於勞役期內納罰金者，以所納之數，依裁判所定罰金易服勞役之標準折算，扣除社會勞動與勞役之日數。
+
+> 釋：一、本條新增。二、第一項規定罰金易服勞役之再易服社會勞動制度：(一)罰金為一種財產刑，以能執行受刑人之財產為原則。至如無財產可繳納或供強制執行，原條文雖定有易服勞役制度，惟須入監執行，屬於機構內處遇方式。經參考德國立法例及本法第四十一條增訂徒刑、拘役得易服社會勞動之立法意旨，爰於第一項規定得以提供社會勞動來替代罰金所易服之勞役，將社會勞動作為罰金易服勞役後之再易刑處分，使無法繳納罰金者，得以提供社會勞動方式，免於入監執行罰金所易服之勞役。(二)依修正條文第四十二條規定，易服勞役期限不得逾一年。惟其他法律對於易服勞役期限亦有特別規定之例，如銀行法、金融控股公司法、票券金融管理法、信託業法、信用合作社法、保險法、證券交易法、證券投資信託及顧問法、農業金融法等金融法規，即規定「犯本法之罪，所科罰金達新臺幣五千萬元以上而無力完納者，易服勞役期間為二年以下，其折算標準以罰金總額與二年之日數比例折算；所科罰金達新臺幣一億元以上而無力完納者，易服勞役期間為三年以下，其折算標準以罰金總額與三年之日數比例折算。」對此高額罰金及逾一年易服勞役期間，若准易服社會勞動，不僅與國民法感情不符，同時減弱罰金刑之嚇阻作用，爰於第一款將之排除適用。(三)對於應執行逾六月有期徒刑併科之罰金，包括數罪併罰之案件，由於所應執行者已非六月以下之短期刑，且須入監執行，犯罪情節較為嚴重，多屬槍
 
 * 43 受拘役或罰金之宣告，而犯罪動機在公益或道義上顯可宥恕者，得易以訓誡。
 
