證券交易法 2009.5.26

--- a/行政-財政及金融/證券交易法.md
+++ b/行政-財政及金融/證券交易法.md
@@ -232,9 +232,9 @@
 
 > 釋：一、本條新增。二、為使公開收購人充分揭露資訊並使應賣人得以瞭解相關事宜，第一項明定交付公開收購說明書之義務。三、第二項明定公開說明書之記載事項授權主管機關訂定。四、第三項明定公開收購人未交付公開收購說明書及其內容有虛偽或隱匿情事，準用法條之民事賠償責任。
 
-* 43.5 公開收購人進行公開收購後，除有左列情事之一，並經主管機關核准者外，不得停止公開收購之進行：一、被收購有價證券之公開發行公司，發生財務、業務狀況之重大變化，經公開收購人提出證明者。二、公開收購人破產、死亡、受禁治產宣告或經裁定重整者。三、其他經主管機關所定之事項。公開收購人所申報及公告之內容有違反法令規定之情事者，主管機關為保護公益之必要，得命令公開收購人變更公開收購申報事項，並重行申報及公告。公開收購人未於收購期間完成預定收購數量或經主管機關核准停止公開收購之進行者，除有正當理由並經主管機關核准者外，公開收購人於一年內不得就同一被收購公司進行公開收購。公開收購人與其關係人於公開收購後，所持有被收購公司已發行股份總數超過該公司已發行股份總數百分之五十者，得以書面記明提議事項及理由，請求董事會召集股東臨時會，不受公司法第一百七十三條第一項規定之限制。
+* 43.5 公開收購人進行公開收購後，除有下列情事之一，並經主管機關核准者外，不得停止公開收購之進行：一、被收購有價證券之公開發行公司，發生財務、業務狀況之重大變化，經公開收購人提出證明者。二、公開收購人破產、死亡、受監護或輔助宣告或經裁定重整者。三、其他經主管機關所定之事項。公開收購人所申報及公告之內容有違反法令規定之情事者，主管機關為保護公益之必要，得命令公開收購人變更公開收購申報事項，並重行申報及公告。公開收購人未於收購期間完成預定收購數量或經主管機關核准停止公開收購之進行者，除有正當理由並經主管機關核准者外，公開收購人於一年內不得就同一被收購公司進行公開收購。公開收購人與其關係人於公開收購後，所持有被收購公司已發行股份總數超過該公司已發行股份總數百分之五十者，得以書面記明提議事項及理由，請求董事會召集股東臨時會，不受公司法第一百七十三條第一項規定之限制。
 
-> 釋：一、本條新增。二、明定公開收購申報後，公開收購人應依申報內容進行收購，收購人不得任意停止公開收購之進行。三、為配合由核准制改為申報制而調整管理之機制，爰參酌第一百五十六條規範之精神，增訂第二項。四、為避免公開收購人以公開收購之名行影響市場之實，爰參酌香港立法例，增訂第三項。五、增列第四項明定公開收購人與其關係人於公開收購後所持有被收購公司已發行股份總數超過該公司已發行股份總數百分之五十者，得請求董事會召集股東臨時會。
+> 釋：一、九十七年五月二十三日修正公布之民法總則編（禁治產部分）、親屬編（監護部分）及其施行法部分條文，已將「禁治產宣告」修正為「監護宣告」，並增訂「受輔助宣告」之相關規定，爰配合將第一項第二款之受「禁治產宣告」修正為受「監護宣告」，另考量受輔助宣告之人係因精神障礙或其他心智缺陷，致其為意思表示或受意思表示，或辨識其意思表示效果之能力，顯有不足，以公開收購之進行涉及公眾權益，如公開收購人受輔助宣告者，宜停止其公開收購之進行，爰於同款增列公開收購人受輔助宣告之規定；其餘各款未修正。二、第二項至第四項未修正。
 
 * 43.6 公開發行股票之公司，得以有代表已發行股份總數過半數股東之出席，出席股東表決權三分之二以上之同意，對左列之人進行有價證券之私募，不受第二十八條之一、第一百三十九條第二項及公司法第二百六十七條第一項至第三項規定之限制：一、銀行業、票券業、信託業、保險業、證券業或其他經主管機關核准之法人或機構。二、符合主管機關所定條件之自然人、法人或基金。三、該公司或其關係企業之董事、監察人及經理人。前項第二款及第三款之應募人總數，不得超過三十五人。普通公司債之私募，其發行總額，除經主管機關徵詢目的事業中央主管機關同意者外，不得逾全部資產減去全部負債餘額之百分之四百，不受公司法第二百四十七條規定之限制。並得於董事會決議之日起一年內分次辦理。該公司應第一項第二款之人之合理請求，於私募完成前負有提供與本次有價證券私募有關之公司財務、業務或其他資訊之義務。該公司應於股款或公司債等有價證券之價款繳納完成日起十五日內，檢附相關書件，報請主管機關備查。依第一項規定進行有價證券之私募者，應在股東會召集事由中列舉並說明左列事項，不得以臨時動議提出：一、價格訂定之依據及合理性。二、特定人選擇之方式。其已洽定應募人者，並說明應募人與公司之關係。三、辦理私募之必要理由。依第一項規定進行有價證券私募，並依前項各款規定於該次股東會議案中列舉及說明分次私募相關事項者，得於該股東會決議之日起一年內，分次辦理。
 
@@ -648,7 +648,7 @@
 
 > 釋：配合行政院金融監督管理委員會於九十三年七月一日成立，業依行政院金融監督管理委員會組織法第二條、第四條及行政程序法第十一條第二項將主管機關由財政部證券暨期貨管理委員會變更為行政院金融監督管理委員會，爰修正本條文。
 
-* 183 本法施行日期，除中華民國八十九年七月十九日修正公布之第五十四條、第九十五條及第一百二十八條自九十年一月十五日施行，中華民國九十四年十二月二十日修正之第十四條之二至第十四條之五、第二十六條之三自九十六年一月一日施行，中華民國九十五年五月五日修正之條文自九十五年七月一日施行外，自公布日施行。
+* 183 本法施行日期，除中華民國八十九年七月十九日修正公布之第五十四條、第九十五條及第一百二十八條自九十年一月十五日施行，九十四年十二月二十日修正之第十四條之二至第十四條之五、第二十六條之三自九十六年一月一日施行，九十五年五月五日修正之條文自九十五年七月一日施行，及九十八年五月二十六日修正之條文自九十八年十一月二十三日施行外，自公布日施行。
 
-> 釋：照黨團協商條文通過。
+> 釋：配合九十七年五月二十三日修正公布之民法及其施行法修正條文自九十八年十一月二十三日施行，將本法本次修正條文之施行日期定自同日施行，另酌作文字修正。
 
