刑事訴訟法 2009.6.12

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -228,9 +228,9 @@
 
 > 釋：基於告訴乃論案件具備合法之告訴係屬訴訟條件，在司法警察機關之階段既然告訴已經撤回或已逾告訴期間者，自無再將人犯解送檢察官之必要，亦可使人犯之人身自由不受到不當之拘束，同時減輕檢察官訊問之負擔。因此，修正本條第二項，增列所犯係告訴或請求乃論之罪其告訴或請求已經撤回或已逾告訴期間者，得不解送。
 
-* 93 被告或犯罪嫌疑人因拘提或逮捕到場者，應即時訊問。偵查中經檢察官訊問後，認有羈押之必要者，應自拘提或逮捕之時起二十四小時內，敘明羈押之理由，聲請該管法院羈押之。前項情形，未經聲請者，檢察官應即將被告釋放。但如認有第一百零一條第一項或第一百零一條之一第一項各款所定情形之一而無聲請羈押之必要者，得逕命具保、責付或限制住居；如不能具保、責付或限制住居，而有必要情形者，仍得聲請法院羈押之。第一項至第三項之規定，於檢察官接受法院依少年事件處理法或軍事審判機關依軍事審判法移送之被告時，準用之。法院於受理前三項羈押之聲請後，應即時訊問。
+* 93 被告或犯罪嫌疑人因拘提或逮捕到場者，應即時訊問。偵查中經檢察官訊問後，認有羈押之必要者，應自拘提或逮捕之時起二十四小時內，敘明羈押之理由，聲請該管法院羈押之。前項情形，未經聲請者，檢察官應即將被告釋放。但如認有第一百零一條第一項或第一百零一條之一第一項各款所定情形之一而無聲請羈押之必要者，得逕命具保、責付或限制住居；如不能具保、責付或限制住居，而有必要情形者，仍得聲請法院羈押之。前三項之規定，於檢察官接受法院依少年事件處理法或軍事審判機關依軍事審判法移送之被告時，準用之。法院於受理前三項羈押之聲請後，應即時訊問。但至深夜仍未訊問完畢，或深夜始受理聲請者，被告、辯護人及得為被告輔佐人之人得請求法院於翌日日間訊問。法院非有正當理由，不得拒絕。前項但書所稱深夜，指午後十一時至翌日午前八時。
 
-> 釋：明定法官、檢察官應即時訊問因拘提或逮捕到場之被告或犯罪嫌疑人。並規定檢察官聲請法院羈押等程序。
+> 釋：一、第一項至第四項未修正。二、檢察官聲請羈押案件，常見檢察官雖於日間向法院提出聲請，惟因案件繁複，延至深夜仍未訊問完畢，或檢察官於深夜始聲請羈押，致被告漏夜應訊之情形。為尊重人權，確保被告於意識清楚情況下接受訊問，防杜深夜疲勞訊問之爭議，爰於第五項增訂但書明定法院於深夜處理聲請羈押案件，被告、辯護人及得為被告輔佐人之人得請求法院延至翌日日間為訊問。法院斟酌實際情況，若無正當理由，不得拒絕其請求。所稱於翌日日間訊問，係指於翌日日間之適當時間訊問，無不必要之遲延即屬之。三、為明確界定第五項但書之範圍，爰增訂第六項，規定深夜係指午後十一時至翌日午前八時之夜間時段，以資適用。
 
 * 93.1 第九十一條及前條第二項所定之二十四小時，有左列情形之一者，其經過之時間不予計入。但不得有不必要之遲延：一、因交通障礙或其他不可抗力事由所生不得已之遲滯。二、在途解送時間。三、依第一百條之三第一項規定不得為詢問者。四、因被告或犯罪嫌疑人身體健康突發之事由，事實上不能訊問者。五、被告或犯罪嫌疑人表示已選任辯護人，因等候其辯護人到場致未予訊問者。但等候時間不得逾四小時。其因智能障礙無法為完全之陳述，因等候第三十五條第三項經通知陪同在場之人到場致未予訊問者，亦同。六、被告或犯罪嫌疑人須由通譯傳譯，因等候其通譯到場致未予訊問者。但等候時間不得逾六小時。七、經檢察官命具保或責付之被告，在候保或候責付中者。但候保或候責付時間不得逾四小時。八、犯罪嫌疑人經法院提審之期間。前項各款情形之經過時間內不得訊問。因第一項之法定障礙事由致二十四小時內無法移送該管法院者，檢察官聲請羈押時，並應釋明其事由。
 
@@ -1006,9 +1006,9 @@
 
 > 釋：一、本條新增。二、為使司法資源有效運用，填補被害人之損害、有利被告或犯罪嫌疑人之再社會化及犯罪之特別預防等目的，爰參考日本起訴猶豫制度及德國附條件及履行期間之暫不提起公訴制度，於本條增訂緩起訴處分制度，其適用之範圍以被告所犯為死刑、無期徒刑或最本刑為三年以上有期待刑以外之罪者，始有適用，其猶豫期間為一年以上三年以下。
 
-* 253.2 檢察官為緩起訴處分者，得命被告於一定期間內遵守或履行左列各款事項：一、向被害人道歉。二、立悔過書。三、向被害人支付相當數額之財產或非財產上之損害賠償。四、向公庫或指定之公益團體、地方自治團體支付一定之金額。五、向指定之公益團體、地方自治團體或社區提供四十小時以上二百四十小時以下之義務勞務。六、完成戒癮治療、精神治療、心理輔導或其他適當之處遇措施。七、保護被害人安全之必要命令。八、預防再犯所為之必要命令。檢察官命被告遵守或履行前項第三款至第六款之事項，應得被告之同意；第三款、第四款並得為民事強制執行名義。第一項情形，應附記於緩起訴處分書內。第一項之期間，不得逾緩起訴期間。
+* 253.2 檢察官為緩起訴處分者，得命被告於一定期間內遵守或履行下列各款事項：一、向被害人道歉。二、立悔過書。三、向被害人支付相當數額之財產或非財產上之損害賠償。四、向公庫或該管檢察署指定之公益團體、地方自治團體支付一定之金額。五、向該管檢察署指定之政府機關、政府機構、行政法人、社區或其他符合公益目的之機構或團體提供四十小時以上二百四十小時以下之義務勞務。六、完成戒癮治療、精神治療、心理輔導或其他適當之處遇措施。七、保護被害人安全之必要命令。八、預防再犯所為之必要命令。檢察官命被告遵守或履行前項第三款至第六款之事項，應得被告之同意；第三款、第四款並得為民事強制執行名義。第一項情形，應附記於緩起訴處分書內。第一項之期間，不得逾緩起訴期間。
 
-> 釋：一、本條新增。二、基於個別預防、鼓勵被告自新及復歸社會之目的，允宜賦予檢察官於「緩起訴」時，得命被告遵守一定之條件或事項之權力，增列第一項。三、第一項第三款至第六款之各該應遵守事項，因課以被告履行一定負擔之義務，人身自由及財產將遭拘束，且產生未經裁判即終局處理案件之實質效果，自應考慮被告之意願，增列第二項前段；又為求檢察官處分得以貫徹及有效執行，自宜使第一項第三款、第四款會被告為一定給付之處分得為民事強制執行之執行名義，以符合公平，增列第二項後段。四、為杜爭議，且明執行範圍，爰於本條第三項增定「緩起訴」附應遵守事項時，應附記於「緩起訴」處分書之內。五、檢察官為緩起訴處分時，命被告遵守一定事項，其期限若逾緩起訴期間，有違緩起訴制度之精神，爰增訂第四項。
+> 釋：一、第一項序文及第一款至第三款、第六款至第八款、第二項至第四項未修正，惟將第一項序文之「左列」一語，改為「下列」。二、緩起訴處分金係屬公益資源，為求合理分配運用，允由該管轄檢察署透過緩起訴處分金執行審查小組，審核檢具運用緩起訴處分金實施計畫之公益團體，擇其中信譽良好、符合緩起訴處分金運用目的者，指定作為緩起訴處分金之支付對象。爰修正第一項第四款。三、酌修第一項第五款有關緩起訴處分時，得命被告義務勞務之受服務者範圍。
 
 * 253.3 被告於緩起訴期間內，有左列情形之一者，檢察官得依職權或依告訴人之聲請撤銷原處分，繼續偵查或起訴：一、於期間內故意更犯有期徒刑以上刑之罪，經檢察官提起公訴者。二、緩起訴前，因故意犯他罪，而在緩起訴期間內受有期徒刑以上刑之宣告者。三、違背第二百五十三條之二第一項各款之應遵守或履行事項者。檢察官撤銷緩起訴之處分時，被告已履行之部分，不得請求返還或賠償。
 
@@ -1560,9 +1560,9 @@
 
 * 448 非常上訴之判決，除依前條第一項第一款但書及第二項規定者外，其效力不及於被告。
 
-* 449 第一審法院依被告在偵查中之自白或其他現存之證據，已足認定其犯罪者，得因檢察官之聲請，不經通常審判程序，逕以簡易判決處刑。但有必要時，應於處刑前訊問被告。前項案件檢察官依通常程序起訴，經被告自白犯罪，法院認為宜以簡易判決處刑者，得不經通常審判程序，逕以簡易判決處刑。依前二項規定所科之刑以宣告緩刑、得易科罰金之有期徒刑及拘役或罰金為限。
+* 449 第一審法院依被告在偵查中之自白或其他現存之證據，已足認定其犯罪者，得因檢察官之聲請，不經通常審判程序，逕以簡易判決處刑。但有必要時，應於處刑前訊問被告。前項案件檢察官依通常程序起訴，經被告自白犯罪，法院認為宜以簡易判決處刑者，得不經通常審判程序，逕以簡易判決處刑。依前二項規定所科之刑以宣告緩刑、得易科罰金或得易服社會勞動之有期徒刑及拘役或罰金為限。
 
-> 釋：依原條文第二項規定，經「法院」訊問，被告自白，始可將通常程序改為簡易程序，則於法院以外之人詢問被告，而被告自白時，可能即無法依本條第二項之規定，將通常程序改為簡易程序，爰就本條第二項為文字之修正，以加強本條第二項之適用。
+> 釋：一、第一項、第二項未修正。二、依刑法第四十一條第三項規定，受六月以下有期徒刑或拘役之宣告而不得易科罰金者，亦得易服社會勞動，自應與現行得易科罰金之案件同視，而得為聲請簡易判決處刑之案件類型，爰修正第三項。三、依刑法第四十一條、第四十二條之一規定，易服社會勞動，係由檢察官斟酌個案情形，指揮執行，故毋庸聲請法院裁定，法官亦無需於判決主文中諭知易服社會勞動之折算標準。
 
 * 449.1 簡易程序案件，得由簡易庭辦理之。
 
@@ -1684,9 +1684,13 @@
 
 * 478 依本法第四百六十六條但書應免服勞役者，由指揮執行之檢察官命令之。
 
-* 479 依刑法第四十二條第一項罰金應易服勞役者，由指揮執行之檢察官命令之。
+* 479 依刑法第四十一條、第四十二條及第四十二條之一易服社會勞動或易服勞役者，由指揮執行之檢察官命令之。易服社會勞動，由指揮執行之檢察官命令向該管檢察署指定之政府機關、政府機構、行政法人、社區或其他符合公益目的之機構或團體提供勞動，並定履行期間。
 
-* 480 罰金易服勞役者，應與處徒刑或拘役之人犯，分別執行。第四百六十七條及第四百六十九條之規定，於易服勞役準用之。
+> 釋：一、配合刑法第四十一條、第四十二條之一增訂易服社會勞動制度，爰於第一項增訂易服社會勞動由指揮執行之檢察官命令之。二、易服社會勞動將釋放大量人力，其服務對象之範圍不宜過於狹隘，爰增訂第二項明定易服社會勞動之服務對象包括政府機關、政府機構、行政法人、社區或其他符合公益目的之機構或團體。
+
+* 480 罰金易服勞役者，應與處徒刑或拘役之人犯，分別執行。第四百六十七條及第四百六十九條之規定，於易服勞役準用之。第四百六十七條規定，於易服社會勞動準用之。
+
+> 釋：一、第一項、第二項未修正。二、配合刑法第四十一條、第四十二條之一增訂易服社會勞動制度，爰增訂第三項，明定易服社會勞動者亦有第四百六十七條之適用。三、社會勞動屬於徒刑、拘役或罰金易服勞役之一種易刑處分，於經檢察官准許易服社會勞動前，係依原宣告之徒刑、拘役或罰金易服之勞役而為傳喚、拘提及通緝。徒刑、拘役原有第四百六十九條之適用，罰金易服之勞役亦有同條之準用。故毋庸另訂易服社會勞動準用第四百六十九條之規定。
 
 * 481 依刑法第八十六條第三項、第八十七條第三項、第八十八條第二項、第八十九條第二項、第九十條第二項或第九十八條第一項前段免其處分之執行，第九十條第三項許可延長處分，第九十三條第二項之付保護管束，或第九十八條第一項後段、第二項免其刑之執行，及第九十九條許可處分之執行，由檢察官聲請該案犯罪事實最後裁判之法院裁定之。第九十一條之一第一項之施以強制治療及同條第二項之停止強制治療，亦同。檢察官依刑法第十八條第一項或第十九條第一項而為不起訴之處分者，如認有宣告保安處分之必要，得聲請法院裁定之。法院裁判時未併宣告保安處分，而檢察官認為有宣告之必要者，得於裁判後三個月內，聲請法院裁定之。
 
