--- a/司法-民事/海商法.md
+++ b/司法-民事/海商法.md
@@ -58,9 +58,9 @@
 
 > 釋：本條未修正。
 
-* 16 共有關係，不因共有人中一人之死亡、破產或禁治產而終止。
+* 16 共有關係，不因共有人中一人之死亡、破產或受監護宣告而終止。
 
-> 釋：本條未修正。
+> 釋：配合九十七年五月二十三日修正公布之民法總則編（禁治產部分）、親屬編（監護部分）及其施行法部分條文，已將「禁治產宣告」修正為「監護宣告」，爰配合將原條文之「禁治產」修正為「受監護宣告」。
 
 * 17 船舶共有人，應選任共有船舶經理人，經營其業務，共有船舶經理人之選任，應以共有人過半數，並其應有部分之價值合計過半數之同意為之。
 
@@ -606,9 +606,9 @@
 
 > 釋：一、條次變更，本條為原條文第一百九十三條移列。二、配合修正條文第一百四十三條、一百四十四條之規定縮短委付權利之行使期間，明定於知悉委付之日起，經過二個月不行使而消滅。
 
-* 153 本法自公布日施行。
+* 153 本法自公布日施行。本法中華民國九十八年六月十二日修正之條文，自九十八年十一月二十三日施行。
 
-> 釋：條次變更，本條為原條文第一百九十四條移列。
+> 釋：一、原條文列為第一項。二、配合民法及其施行法修正條文自九十八年十一月二十三日施行，本法本次修正之條文亦定自同日施行，爰增訂第二項。
 
 * 154 運費因貨載之毀損或滅失，致減少或全無者，認為共同海損。但運送人因此減省之費用，應扣除之。
 
